--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "nuxt": "^3.14.1592",
     "puppeteer": "^23.9.0",
+    "puppeteer-core": "^23.9.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@sparticuz/chromium": "^131.0.1"
   }
 }
